# http_server

./: .gitignore  .gitmodules  Base64.cpp  Base64.h  HTTP.cpp  HTTP.h  HTTPRequest.cpp  HTTPRequest.h  HTTPServer.cpp  HTTPServer.h  README.md  TCPServer.cpp  TCPServer.h  bootstrap_min_css.cpp  bootstrap_min_js.cpp  index_html.cpp  jquery_min_js.cpp  json.hpp  main.cpp  script_js.cpp  style_css.cpp
example/: .gitignore  CMakeLists.txt  file.cpp  file.hpp  main.cpp
example/files/: index.html  style.css  test.html
example/files/assets/javascripts/: script.js
example/view/: layout.html.inja
example/view/static/: home.html.inja
src/: http.cpp  http.h  http_request.cpp  http_request.h  http_server.cpp  http_server.h  tcp_server.cpp  tcp_server.h
src/controllers/: controller.cpp  controller.hpp  file_controller.cpp  file_controller.hpp  view_controller.cpp  view_controller.hpp
src/http_server/: http.cpp  http.hpp  http_request.cpp  http_request.hpp  http_server.cpp  http_server.hpp  http_server.tpp  tcp_server.cpp
src/http_server/utils/: base64.cpp
src/utils/: base64.cpp
